--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,516 @@
-ipykernel
-ipython
-transformers
-pypdf
-openpyxl
-langchain
-torch
-accelerate
-bitsandbytes
-ctransformers
-sentence_transformers
-SQLAlchemy==1.4.47
-faiss_cpu
-chromadb
-docx2txt
-nltk
-farm-haystack
+absl-py==1.4.0
+accelerate==0.25.0
+aeppl==0.0.38
+aesara==2.8.7
+aiofiles==23.2.1
+aiohttp==3.9.1
+aiosignal==1.3.1
+alembic==1.12.1
+altair==5.1.1
+anaconda-client==1.11.2
+anaconda-navigator==2.4.2
+anaconda-project @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_6ddp1qj6b_/croots/recipe/anaconda-project_1660339893712/work
+annotated-types==0.5.0
+ansi2html==1.8.0
+anyio==3.7.1
+appdirs @ file:///home/conda/feedstock_root/build_artifacts/appdirs_1603108395799/work
+appnope @ file:///Users/ktietz/ci_310/appnope_1643965056645/work
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+arviz==0.16.1
+asgiref==3.7.2
+asttokens @ file:///opt/conda/conda-bld/asttokens_1646925590279/work
+astunparse==1.6.3
+async-lru==2.0.4
+async-timeout==4.0.3
+attrs==23.1.0
+Authlib==1.2.1
+autogen==1.0.16
+autograd==1.4
+autopep8==2.0.4
+autoviz==0.1.730
+Babel==2.13.0
+backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
+backoff==2.2.1
+backports.functools-lru-cache @ file:///tmp/build/80754af9/backports.functools_lru_cache_1618170165463/work
+backports.tempfile @ file:///home/linux1/recipes/ci/backports.tempfile_1610991236607/work
+backports.weakref==1.0.post1
+backtrader==1.9.78.123
+bcrypt==4.1.2
+beautifulsoup4 @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_fa78jvo_0n/croot/beautifulsoup4-split_1681493044306/work
+bitsandbytes==0.41.3.post2
+bleach @ file:///opt/conda/conda-bld/bleach_1641577558959/work
+blinker==1.6.2
+blis==0.7.10
+boilerpy3==1.0.7
+bokeh @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_1d5f9110-9a97-4c04-9cb0-9afd48462fda01yz4zc9/croots/recipe/bokeh_1658136668661/work
+boltons @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_f63n9uulmp/croot/boltons_1677628710094/work
+boto3 @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_8c172c56-4185-4a3f-98d9-f532e49fd3b2aww4j__w/croots/recipe/boto3_1657820115321/work
+botocore @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_b1553gd808/croot/botocore_1667494015747/work
+Bottleneck @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_07078715-3ab7-4562-8d3d-d56b0eaa0f7dp504n_ny/croots/recipe/bottleneck_1657175566567/work
+Brotli==1.0.9
+brotlipy==0.7.0
+bs4==0.0.1
+btyd==0.1a1
+cachetools==5.3.1
+catalogue==2.0.9
+catboost==1.2.2
+cattrs==23.2.3
+certifi==2023.7.22
+cffi @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_ab19r4bji3/croot/cffi_1670423206034/work
+chardet==3.0.4
+charset-normalizer @ file:///tmp/build/80754af9/charset-normalizer_1630003229654/work
+chroma-hnswlib==0.7.3
+chromadb==0.4.20
+click @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_croot-quwchbn8/click_1646123324461/work
+cloudpickle==2.2.1
+clyent==1.2.2
+colorama==0.4.6
+colorcet==3.0.1
+coloredlogs==15.0.1
+colorlog==6.7.0
+comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1691044910542/work
+conda @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_3ehd9hpsix/croot/conda_1690494984812/work
+conda-build==3.24.0
+conda-content-trust @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_11146a2b-93c2-444c-a378-ad4fac363e991s0r1hnp/croots/recipe/conda-content-trust_1658126383571/work
+conda-pack @ file:///tmp/build/80754af9/conda-pack_1611163042455/work
+conda-package-handling @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_5f3f459f9v/croot/conda-package-handling_1672865025324/work
+conda-repo-cli==1.0.41
+conda-token @ file:///Users/paulyim/miniconda3/envs/c3i/conda-bld/conda-token_1662660369760/work
+conda-verify==3.4.2
+conda_package_streaming @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_58gpsa_6af/croot/conda-package-streaming_1670508144037/work
+confection==0.1.1
+cons==0.4.6
+construct==2.5.3
+contourpy==1.1.0
+cryptography @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_a9zjqvif1f/croot/cryptography_1677533099634/work
+cssselect==1.2.0
+ctransformers==0.2.27
+cvxopt==1.3.2
+cycler==0.11.0
+cymem==2.0.7
+dash==2.12.1
+dash-bootstrap-components==1.3.1
+dash-colorscales==0.0.4
+dash-core-components==2.0.0
+dash-daq==0.5.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+databricks-cli==0.18.0
+dataclasses-json==0.6.3
+datasets==2.11.0
+dateparser==1.1.8
+DateTime==5.2
+debugpy @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_563_nwtkoc/croot/debugpy_1690905063850/work
+decorator @ file:///opt/conda/conda-bld/decorator_1643638310831/work
+defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
+Deprecated==1.2.14
+deprecation==2.1.0
+dill==0.3.6
+diskcache==5.6.3
+distro==1.8.0
+docker==6.1.3
+docopt==0.6.2
+docutils==0.20.1
+docx2txt==0.8
+dtale==3.3.0
+easyocr==1.7.1
+editdistance==0.6.2
+efficientnet==1.0.0
+eikon==1.1.17
+emoji==2.8.0
+empyrical==0.5.5
+entrypoints==0.4
+essential-generators==1.0
+et-xmlfile==1.1.0
+etuples==0.3.9
+evaluate==0.4.0
+Events==0.5
+exceptiongroup==1.1.3
+executing @ file:///opt/conda/conda-bld/executing_1646925071911/work
+faiss-cpu==1.7.2
+fake-useragent==1.2.1
+farm-haystack==1.23.0
+fastapi==0.105.0
+fastjsonschema @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_43a0jaiddu/croots/recipe/python-fastjsonschema_1661368628129/work
+fastprogress==1.0.3
+feedparser==6.0.10
+ffmpy==0.3.1
+filelock @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_20tv0lrp8x/croot/filelock_1672387134240/work
+FLAML==2.1.1
+Flask==2.2.5
+Flask-Compress==1.13
+flask-ngrok==0.0.25
+flatbuffers==23.5.26
+fonttools==4.42.0
+fqdn==1.5.1
+frozendict==2.3.8
+frozenlist==1.4.0
+fsspec==2023.9.1
+future @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_14jxr8efxg/croot/future_1677599893084/work
+gast==0.4.0
+gitdb==4.0.10
+GitPython==3.1.35
+glob2 @ file:///home/linux1/recipes/ci/glob2_1610991677669/work
+google-api-core==2.14.0
+google-auth==2.22.0
+google-auth-oauthlib==1.0.0
+google-cloud-vision==3.4.5
+google-pasta==0.2.0
+googleapis-common-protos==1.61.0
 gradio==3.50.2
+gradio_client==0.6.1
+graphviz==0.20.1
+grpcio==1.59.3
+grpcio-status==1.59.3
+gunicorn==21.2.0
+h11==0.14.0
+h2==4.1.0
+h5netcdf==1.2.0
+h5py==3.9.0
+haystack==0.42
+holoviews==1.14.9
+hpack==4.0.0
+html5lib @ file:///home/conda/feedstock_root/build_artifacts/html5lib_1592930327044/work
+httpcore==0.18.0
+httptools==0.6.1
+httpx==0.25.0
+huggingface-hub==0.19.4
+humanfriendly==10.0
+hvplot==0.7.3
+hyperframe==6.0.1
+idna==2.10
+imageio==2.31.1
+imgaug==0.4.0
+importlib-metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1688754491823/work
+importlib-resources==6.1.1
+inflect==7.0.0
+intervaltree==3.1.0
+ipykernel @ file:///Users/runner/miniforge3/conda-bld/ipykernel_1691424478312/work
+ipython @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_84r7osg3nm/croot/ipython_1691532095330/work
+ipython-genutils==0.2.0
+ipywidgets==8.1.0
+isoduration==20.11.0
+itsdangerous==2.1.2
+jaraco.classes==3.3.0
+jedi @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/croot-f1t6hma6/jedi_1644315882177/work
+Jinja2 @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_9fjgzv9ant/croot/jinja2_1666908141308/work
+jmespath @ file:///Users/ktietz/demo/mc3/conda-bld/jmespath_1630583964805/work
+joblib==1.3.2
+json5==0.9.14
+jsonpatch==1.33
+jsonpointer==2.1
+jsonschema==4.19.1
+jsonschema-specifications==2023.7.1
+jupyter==1.0.0
+jupyter-console==6.6.3
+jupyter-events==0.7.0
+jupyter-lsp==2.2.0
+jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1687700988094/work
+jupyter_core @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_d1sy1hlz9t/croot/jupyter_core_1679906585151/work
+jupyter_server==2.7.3
+jupyter_server_terminals==0.4.4
+jupyterlab==4.0.7
+jupyterlab-pygments==0.2.2
+jupyterlab-widgets==3.0.8
+jupyterlab_server==2.25.0
+kaleido==0.2.1
+keras==2.13.1
+Keras-Applications==1.0.8
+keras-models==0.0.7
+keras-ocr==0.9.3
+keyring==24.3.0
+kiwisolver==1.4.4
+kubernetes==28.1.0
+langchain==0.0.350
+langchain-community==0.0.2
+langchain-core==0.1.0
+langcodes==3.3.0
+langsmith==0.0.69
+lazy-imports==0.3.1
+lazy_loader==0.3
+libarchive-c @ file:///tmp/build/80754af9/python-libarchive-c_1617780486945/work
+libclang==16.0.6
+Lifetimes==0.11.3
+llvmlite==0.39.1
+logical-unification==0.4.6
+loralib==0.1.1
+lxml @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_bbjv2ox7t8/croot/lxml_1679646469466/work
+lz4==4.3.2
+Mako==1.2.4
+Markdown @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_160njdxnjs/croot/markdown_1671541913695/work
+markdown-it-py==3.0.0
+MarkupSafe @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_12c133f5-0720-4727-9c18-599a3af825723lzwham3/croots/recipe/markupsafe_1654597866058/work
+marshmallow==3.20.1
+matplotlib==3.7.2
+matplotlib-inline @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_f6fdc0hldi/croots/recipe/matplotlib-inline_1662014472341/work
+mdurl==0.1.2
+miniKanren==1.0.3
+missingno==0.5.2
+mistune==3.0.2
+mlflow==2.8.0
+mmh3==4.0.1
+monotonic==1.6
+more-itertools==10.1.0
+mpl-finance==0.10.1
+mplfinance==0.12.10b0
+mpmath==1.3.0
+multidict==6.0.4
+multipledispatch==1.0.0
+multiprocess==0.70.14
+multitasking==0.0.11
+murmurhash==1.0.9
+mypy-extensions==1.0.0
+navigator-updater==0.4.0
+nbclient==0.8.0
+nbconvert==7.9.2
+nbformat @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_94781rq_cg/croot/nbformat_1670352348390/work
+nest-asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1664684991461/work
+networkx==3.1
+nh3==0.2.15
+ninja==1.11.1.1
+nltk==3.8.1
+notebook==7.0.5
+notebook_shim==0.2.3
+num2words==0.5.13
+numba==0.56.0
+numexpr @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_76yyu1p9jk/croot/numexpr_1683221830860/work
+numpy==1.22.4
+oauthlib==3.2.2
+onnxruntime==1.16.3
+openai==0.28.0
+opencv-python==4.8.0.76
+opencv-python-headless==4.8.1.78
+openpyxl==3.1.2
+opentelemetry-api==1.21.0
+opentelemetry-exporter-otlp-proto-common==1.21.0
+opentelemetry-exporter-otlp-proto-grpc==1.21.0
+opentelemetry-instrumentation==0.42b0
+opentelemetry-instrumentation-asgi==0.42b0
+opentelemetry-instrumentation-fastapi==0.42b0
+opentelemetry-proto==1.21.0
+opentelemetry-sdk==1.21.0
+opentelemetry-semantic-conventions==0.42b0
+opentelemetry-util-http==0.42b0
+opt-einsum==3.3.0
+optuna==3.4.0
+orjson==3.9.10
+overrides==7.4.0
+packaging==23.2
+pandas==1.5.3
+pandas-datareader==0.10.0
+pandas-dq==1.28
+pandocfilters==1.5.0
+panel @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_ee47osobek/croot/panel_1676379694388/work
+param @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_cfp588uo3i/croot/param_1684915323490/work
+parse==1.19.1
+parso @ file:///opt/conda/conda-bld/parso_1641458642106/work
+pathlib @ file:///Users/ktietz/demo/mc3/conda-bld/pathlib_1629713961906/work
+pathy==0.10.2
+patsy==0.5.3
+pefile==2023.2.7
+peft==0.3.0
+pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
+pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
+Pillow==9.4.0
+pkginfo @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_d1oq9rhye6/croot/pkginfo_1679431178842/work
+platformdirs @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_f7wx6m2jsp/croots/recipe/platformdirs_1662711384790/work
+plot==0.6.5
+plotly==5.16.1
+pluggy @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_croot-w6jyveby/pluggy_1648109277227/work
+ply==3.11
+pm4py==2.7.8.4
+portalocker==2.8.2
+posthog==3.1.0
+preshed==3.0.8
+prometheus-client==0.17.1
+prompt-toolkit @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_0blbsngvis/croot/prompt-toolkit_1672387317724/work
+prompthub-py==4.0.0
+proto-plus==1.22.3
+protobuf==4.24.2
+psutil @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_1310b568-21f4-4cb0-b0e3-2f3d31e39728k9coaga5/croots/recipe/psutil_1656431280844/work
+psycopg2-binary==2.9.9
+ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1609355006118/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
+pulsar-client==3.3.0
+pure-eval @ file:///opt/conda/conda-bld/pure_eval_1646925070566/work
+py-cpuinfo==9.0.0
+py4j==0.10.9.7
+pyamg==5.0.1
+pyarrow==13.0.0
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pyautogen==0.2.2
+pyclipper==1.3.0.post5
+pycodestyle==2.11.1
+pycosat @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_e9xhel3kyj/croot/pycosat_1666805516297/work
+pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
+pyct @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_6dabxeyop1/croot/pyct_1675441482089/work
+pydantic==1.10.13
+pydantic_core==2.14.5
+pydeck==0.8.0
+pydotplus==2.0.2
+pydub==0.25.1
+pyee==8.2.2
+pyfolio==0.9.2
+Pygments @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_29bs9f_dh9/croot/pygments_1684279974747/work
+PyJWT @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_83311740-c3bc-48a8-9688-62d7e2d625f5s6jo920w/croots/recipe/pyjwt_1657544592579/work
+pymc==4.4.0
+Pympler==1.0.1
+pyOpenSSL @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_b8whqav6qm/croot/pyopenssl_1690223428943/work
+pyparsing==3.0.9
+pypdf==3.17.3
+PyPika==0.48.9
+pyppeteer==1.0.2
+pyproject==1.3.1
+PyQt5-sip==12.11.0
+pyquery==2.0.0
+pyrsistent @ file:///Users/ktietz/ci_310/pyrsistent_1643962172005/work
+PySocks @ file:///Users/ktietz/ci_310/pysocks_1643961536721/work
+pyspark==3.5.0
+pytesseract==0.3.10
+python-bidi==0.4.2
+python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
+python-dotenv==1.0.0
+python-json-logger==2.0.7
+python-multipart==0.0.6
+python-ptrace==0.9.8
+pytz @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_c56ru3yml9/croot/pytz_1671697451306/work
+pytz-deprecation-shim==0.1.0.post0
+pyviz-comms @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_54a2e0jluq/croot/pyviz_comms_1685030719530/work
+PyYAML @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_8dd_9u21zz/croot/pyyaml_1670514759576/work
+pyzmq @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_23n9bfwjq5/croot/pyzmq_1686601381911/work
+qtconsole==5.4.4
+QtPy==2.4.0
+QuantStats==0.0.62
+quantulum3==0.9.0
+querystring-parser==1.2.4
+rank-bm25==0.2.2
+readme-renderer==42.0
+referencing==0.30.2
+regex==2023.8.8
+requests @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_54zi68h2nb/croot/requests_1690400233316/work
+requests-cache==0.9.8
+requests-html==0.10.0
+requests-oauthlib==1.3.1
+requests-toolbelt @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_3fee1fr2ex/croot/requests-toolbelt_1690874011813/work
+responses==0.18.0
+retrying==1.3.4
+rfc3339-validator==0.1.4
+rfc3986==1.5.0
+rfc3986-validator==0.1.1
+rich==13.5.2
+rouge-score==0.1.2
+rpds-py==0.10.6
+rsa==4.9
+ruamel-yaml-conda @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_ffli8pikr0/croot/ruamel_yaml_1667489741108/work
+ruamel.yaml @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_aeh5mqcw49/croot/ruamel.yaml_1666304555976/work
+ruamel.yaml.clib @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_f64xdg2rww/croot/ruamel.yaml.clib_1666302244208/work
+s3transfer @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_3ccd2ead-bd3e-4d8c-bed5-1dfeadf8f171x10gfipf/croots/recipe/s3transfer_1654524201724/work
+safetensors==0.3.3
+schedule==1.2.0
+scikit-image==0.22.0
+scikit-learn==1.3.0
+scipy==1.11.2
+seaborn==0.12.2
+semantic-version==2.10.0
+Send2Trash==1.8.2
+sentence-transformers==2.2.2
+sentencepiece==0.1.99
+sgmllib3k==1.0.0
+shapely==2.0.2
+shellingham==1.5.4
+sip @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_fbqiv4bzwo/croots/recipe/sip_1659012372184/work
+six @ file:///tmp/build/80754af9/six_1644875935023/work
+smart-open==6.3.0
+smmap==5.0.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+soupsieve @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_cfrx9hmp3g/croot/soupsieve_1680518480034/work
+spacy==3.6.1
+spacy-legacy==3.0.12
+spacy-loggers==1.0.4
+spark==0.2.1
+SQLAlchemy==1.4.47
+SQLAlchemy-Utils==0.41.1
+sqlparse==0.4.4
+squarify==0.4.3
+srsly==2.4.7
+sseclient-py==1.8.0
+stack-data @ file:///opt/conda/conda-bld/stack_data_1646927590127/work
+starlette==0.27.0
+statsmodels==0.14.0
+streamlit==1.29.0
+StringDist==1.0.9
+strsimpy==0.2.1
+sympy==1.12
+tabulate==0.9.0
+tenacity==8.2.3
+tensorboard==2.13.0
+tensorboard-data-server==0.7.1
+tensorflow==2.13.0
+tensorflow-estimator==2.13.0
+tensorflow-macos==2.13.0
+termcolor==2.3.0
+terminado==0.17.1
+textblob==0.17.1
+thinc==8.1.12
+threadpoolctl==3.2.0
+tifffile==2023.9.26
+tiktoken==0.5.2
+tinycss2==1.2.1
+tokenizers==0.15.0
+toml @ file:///tmp/build/80754af9/toml_1616166611790/work
+tomli @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_d0e5ffbf-5cf1-45be-8693-c5dff8108a2awhthtjlq/croots/recipe/tomli_1657175508477/work
+tomlkit==0.12.0
+toolz @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_362wyqvvgy/croot/toolz_1667464079070/work
+torch==2.0.1
+torchaudio==2.0.2
+torchdata==0.5.1
+torchvision==0.15.2
+tornado @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_28d93aezp2/croot/tornado_1690848278715/work
+tqdm @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_ac7zic_tin/croot/tqdm_1679561870178/work
+traitlets @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_6301rd5qbe/croot/traitlets_1671143894285/work
+transformers==4.35.2
+twine==4.0.2
+typer==0.9.0
+types-python-dateutil==2.8.19.14
+typing==3.7.4.3
+typing-inspect==0.9.0
+typing_extensions==4.9.0
+tzdata==2023.3
+tzlocal==4.3.1
+ujson @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_72fbb42e-3a51-4c00-94eb-4f9b77e34df43ubvg1xz/croots/recipe/ujson_1657544926230/work
+uri-template==1.3.0
+url-normalize==1.4.3
+urllib3 @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_e9usuw__8i/croot/urllib3_1686166332689/work
+utils==1.0.1
+uvicorn==0.24.0.post1
+uvloop==0.19.0
+validators==0.22.0
+vectorbt==0.25.5
+w3lib==2.1.2
+wasabi==1.1.2
+watchdog==3.0.0
+watchfiles==0.21.0
+wcwidth @ file:///Users/ktietz/demo/mc3/conda-bld/wcwidth_1629357192024/work
+weaviate-client==3.25.3
+webcolors==1.13
+webencodings==0.5.1
+websocket-client==1.6.3
+websockets==10.4
+Werkzeug==2.2.3
+widgetsnbextension==4.0.8
+wordcloud==1.9.2
+wrapt==1.15.0
+xarray==2023.8.0
+xarray-einstats==0.6.0
+xgboost==2.0.0
+xlrd==2.0.1
+xxhash==3.4.1
+yahoo-fin==0.8.9.1
+yarl==1.9.4
+yfinance @ file:///home/conda/feedstock_root/build_artifacts/yfinance_1681671940379/work
+zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1689374466814/work
+zope.interface==6.0
+zstandard @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_41b3vxtask/croot/zstandard_1677013668452/work
